@@ -34,6 +34,7 @@ These changes are merged into the `main` branch, but have not been released. Aft
 
 * `IterativeCleanup` now automatically extends its extending module with `Dry::Configurable` prior to defining settings that depend on `Dry::Configurable`. (PR#192)
 * `Kiba::Extend::Job.output?` no longer fails if given job returns Nil (PR#194)
+* `Reshape::FieldsToFieldGroupWithConstant` constant value is no longer added to rows with no values in the renamed/remapped value fields, when fieldmap length == 1. (PR#195)
 
 === Added
 
